--- a/log4j-converter-plugin-descriptor/src/main/shaded-resources/log4j2.component.properties
+++ b/log4j-converter-plugin-descriptor/src/main/shaded-resources/log4j2.component.properties
@@ -1,3 +1,4 @@
+#
 # Licensed to the Apache Software Foundation (ASF) under one or more
 # contributor license agreements.  See the NOTICE file distributed with
 # this work for additional information regarding copyright ownership.
@@ -12,10 +13,8 @@
 # WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 # See the License for the specific language governing permissions and
 # limitations under the License.
-
-# All text files with LF line endings
-* text=auto eol=lf
-# Maven Wrapper cmd script
-/mvnw.cmd eol=crlf
-# Maven Wrapper need LF line endings
-/.mvn/wrapper/maven-wrapper.properties eol=lf
+#
+##
+# Enable Simple Logger
+#
+log4j.provider = org.apache.logging.log4j.simple.internal.SimpleProvider
