Adds a `log4j-transform-cli` tool
This PR adds a simple `picocli`-based tool to access the Configuration Converter API from the command line.
Currently, two commands are available:

- `configFile listFormats` lists the available configuration file formats.
- `configFile convert` converts configuration files from one format to another (e.g., a Log4j 1 Properties file to a Log4j 2 Core XML file).

Part of apache/logging-log4j2#3220

--- a/antora-playbook.yaml
+++ b/antora-playbook.yaml
@@ -25,6 +25,7 @@ content:
     - url: .
       branches: HEAD
       start_paths:
+        - log4j-transform-cli/target/generated-site/antora
         - target/generated-site/antora
       edit_url:
 
